[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "day1_part1"
path = "day1_part1/src/main.rs"

[[bin]]
name = "day1_part2"
path = "day1_part2/src/main.rs"

[[bin]]
name = "day2_part1"
path = "day2_part1/src/main.rs"

[[bin]]
name = "day2_part2"
path = "day2_part2/src/main.rs"

[dependencies]
